# btrfs-diff

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
examples/: comprehensive_validation_example.py  validation_results_anon.md  validation_results_original.md
src/btrfs_diff/: __init__.py  cli.py  parser.py  stream.py  types.py  validator.py
tests/: __init__.py  conftest.py  test_directory_detection.py
tests/fixtures/: __init__.py  btrfs_snapshot_fixture.py
tests/integration/: __init__.py  test_complex_scenarios.py  test_directory_detection_bug.py  test_directory_detection_debug.py  test_directory_operations.py  test_edge_cases.py  test_file_operations.py
