[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btrfs-diff"
version = "0.1.2"
description = "Parse and analyze differences between btrfs snapshots"
authors = [
    {name = "PB & Claude", email = "pball+github@hrdag.org"}
]
license = {text = "GPL-2.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0,<0.16.0",
    "rich>=13.0,<14.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
]
keywords = ["btrfs", "snapshots", "filesystem", "diff", "backup"]

[project.urls]
Homepage = "https://github.com/example/btrfs-diff"
Repository = "https://github.com/example/btrfs-diff"
Issues = "https://github.com/example/btrfs-diff/issues"

[project.scripts]
btrfs-diff = "btrfs_diff.cli:main"

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.0.0,<2.0.0",
    "pytest>=8.4.0",
    "ruff>=0.7.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/btrfs_diff"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 79
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
known-first-party = ["btrfs_diff"]
